<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.CreateTrackFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/backBtnTrack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:contentDescription="@string/add_track_go_back_button"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:rotationY="190"
                    app:srcCompat="@drawable/ic_arrow"
                    app:tint="@color/arrow_color" />

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/add_track_title"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/add_track_description"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/descriptionAlbumTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_album"
                android:textColor="@color/purple"
                android:textSize="14sp" />

            <!-- Selección de Álbum -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_album"
                android:labelFor="@id/albumSpinner">

                <Spinner
                    android:id="@+id/albumSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_track_name"
                android:labelFor="@id/trackNameEditText">

                <EditText
                    android:id="@+id/trackNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Nombre de la canción"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Duración -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/add_track_duration"
                android:labelFor="@id/trackDurationEditText">

                <EditText
                    android:id="@+id/trackDurationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Duración de la canción"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Botón de Crear -->
            <Button
                android:id="@+id/createTrackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/add_track_button"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>