...
            android:layout_gravity="bottom|start"
            android:textSize="16sp"
            app:layout_collapseMode="parallax"
            tools:text="Navega los álbumes" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/album_item" />
    </LinearLayout>
</layout>
