...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAlignment="center"
                    tools:text="Descripcion" />

                <TextView
                    android:id="@+id/txtCancionesSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:minWidth="56dp"
                    android:minHeight="56dp"
...
